hphp/test/slow/nullsafe/nullsafe-prop-6.php.expectf

Fatal error: ?-> is not allowed in write context in %s/test/slow/nullsafe/nullsafe-prop-6.php on line 6
